package tpi.main;

public class Main {
    public static void main(String[] args) {
        new AppMenu().start();
    }
}
